--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 // base color
 $blue: #324157;
 $light-blue: #3a71a8;
@@ -19,10 +20,7 @@ $menuHover: #263445;
 $subMenuBg: #1f2d3d;
 $subMenuHover: #001528;
 
-$sideBarWidth: 210px;
-
-// the :export directive is the magic sauce for webpack
-// https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
+$sideBarWidth: 211px;
 
 :export {
   menuText: $menuText;
