--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './variables.scss';
 @import './mixin.scss';
 @import './transition.scss';
+@import './sidebar.scss';
 
 a:focus,
 a:active {
@@ -12,5 +13,6 @@ a:focus,
 a:hover {
   color: inherit;
   text-decoration: none;
+  outline: none;
   cursor: pointer;
 }
