--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -23,6 +23,7 @@
     height: 50px;
   }
 
+  & .nest-menu .el-submenu > .el-submenu__title,
   & .el-submenu .el-menu-item {
     min-width: $sideBarWidth !important;
     background-color: $subMenuBg !important;
